--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
     "no-console": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "react/jsx-one-expression-per-line": "off"
   },
   "env": {
     "browser": true,
